feat: criação cardes desktop 1440px

--- a/index.html
+++ b/index.html
@@ -15,22 +15,30 @@
   <body>
     <section class="structure">
       <div class="daniel content-structure">
+        <div class="bg-absolute">
+          <img class="bg" src="/src/assets/images/bg-pattern-quotation.svg" />
+        </div>
+
         <div class="flex">
-          <img
-            src="/src/assets/images/image-daniel.jpg"
-            alt="Daniel Clifford"
-          />
+          <div class="photo-responsive">
+            <img
+              src="/src/assets/images/image-daniel.jpg"
+              alt="Daniel Clifford"
+            />
+          </div>
+
           <div class="rows">
             <h3>Daniel Clifford</h3>
-            <p>Verified Graduate</p>
+            <p class="opacity-50">Verified Graduate</p>
           </div>
         </div>
+
         <h2>
           I received a job offer mid-course, and the subjects i learned were
           current, if not more so, in the company I joined. I honestly feel I
           got every penny's worth.
         </h2>
-        <p>
+        <p class="opacity-70">
           "I was an EMT for many years before i joined the bootcamp. I've been
           looking to make a transition and have heard some people who had an
           amazing experience here. I singned up for the free intro course and
@@ -43,17 +51,19 @@
 
       <div class="jonathan content-structure">
         <div class="flex">
-          <img
-            src="/src/assets/images/image-jonathan.jpg"
-            alt="Jonathan Walters"
-          />
+          <div class="photo-responsive">
+            <img
+              src="/src/assets/images/image-jonathan.jpg"
+              alt="Jonathan Walters"
+            />
+          </div>
           <div class="rows">
             <h3>Jonathan Walters</h3>
-            <p>Verified Graduate</p>
+            <p class="opacity-50">Verified Graduate</p>
           </div>
         </div>
         <h2>The team was very supportive and kept me motivated</h2>
-        <p>
+        <p class="opacity-70 p-jonathan">
           "I started as a total newbie with virtually no coding skills. I now
           work as a mobile enginner for a big company. This was one of the best
           investments i've made in myself."
@@ -62,15 +72,17 @@
 
       <div class="kira content-structure">
         <div class="flex">
-          <img src="/src/assets/images/image-kira.jpg" alt="Kira Whattlers" />
+          <div class="photo-responsive">
+            <img src="/src/assets/images/image-kira.jpg" alt="Kira Whattlers" />
+          </div>
           <div class="rows">
-            <h3>Kira Whattlers</h3>
-            <p>Verified Graduate</p>
+            <h3>Kira Whittle</h3>
+            <p class="opacity-50">Verified Graduate</p>
           </div>
         </div>
 
         <h2>Such a life-changing experience. Highly recommended!</h2>
-        <p>
+        <p class="opacity-70 p-kira">
           "Before joining the bootcamp, i've never written a line of code. I
           needed some structure from professionals who can help me learn
           programming step by step. I was encouranged to enroll by a forner
@@ -87,17 +99,19 @@
 
       <div class="jaenette content-structure">
         <div class="flex">
-          <img
-            src="/src/assets/images/image-jeanette.jpg"
-            alt="Jeanette Harmon"
-          />
+          <div class="photo-responsive">
+            <img
+              src="/src/assets/images/image-jeanette.jpg"
+              alt="Jeanette Harmon"
+            />
+          </div>
           <div class="rows">
             <h3>Jeanette Harmon</h3>
-            <p>Verified Graduate</p>
+            <p class="opacity-50">Verified Graduate</p>
           </div>
         </div>
         <h2>An overall wonderful and rewarding experience</h2>
-        <p>
+        <p class="opacity-70">
           "Thank you for the wonderful experience! i now have a job i really
           enjoy, and make a good living while doing something i love."
         </p>
@@ -105,13 +119,15 @@
 
       <div class="patrick content-structure">
         <div class="flex">
-          <img
-            src="/src/assets/images/image-patrick.jpg"
-            alt="Patrick Abrams"
-          />
+          <div class="photo-responsive">
+            <img
+              src="/src/assets/images/image-patrick.jpg"
+              alt="Patrick Abrams"
+            />
+          </div>
           <div class="rows">
             <h3>Patrick Abrams</h3>
-            <p>Verified Graduate</p>
+            <p class="opacity-50">Verified Graduate</p>
           </div>
         </div>
         <h2>
@@ -119,7 +135,7 @@
           Getting guidance from them and learming from their experiences was
           easy.
         </h2>
-        <p>
+        <p class="opacity-70 p-patrick">
           "The staff seem genuinely concemed about my progress whic i find
           really refreshing. The program gave me the confidence necessary to be
           able to go out in the world and present myself as a capable junior
